# memory-steward

./: ARCHITECTURE_CHEAT_SHEET.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  RFC_PROPOSAL.md  Taskfile.yml
.github/workflows/: build-and-push-images.yaml
components/embeddings/: Dockerfile  pyproject.toml
components/embeddings/src/embeddings/: server.py
components/memory_router/: Dockerfile  pyproject.toml
components/memory_router/src/memory_router/: mcp_bridge.py  server.py  telemetry.py
components/memory_steward/: Dockerfile  pyproject.toml
components/memory_steward/src/memory_steward/: server.py  telemetry.py
components/memory_steward_list/: Dockerfile  pyproject.toml
components/memory_steward_list/src/memory_steward_list/: config.py  server.py  service.py  telemetry.py
components/memory_steward_mcp/: Dockerfile  pyproject.toml
components/memory_steward_mcp/src/memory_steward_mcp/: cache.py  config.py  content_plane.py  diagnostics_plane.py  server.py  stability_plane.py
docs/: 00_style_guide.md  01_overview.md  02_operational_mode.md  03_reference.md  04_optimizations.md  05_stability.md  06_telemetry.md  07_glass_pane.md  08_verification.md  09_runtime_contract.md  10_industry_landscape.md  11_design_principles.md  12_extensions.md  WHITEPAPER.md  architecture.md  industry-landscape-memory.md  invariants.md  storage.md
install/: install.sh  install.sh_1
k8s/: anythingllm-config.yaml  anythingllm.yaml  embeddings.yaml  hf-cache-pvc.yaml  hf-secret.yaml  ingress.yaml  memory-router.yaml  memory-steward-list.yaml  memory-steward-mcp.yaml  memory-steward.yaml  namespace.yaml  open-webui.yaml  openai-secret.yaml  postgres-conn.yaml  postgres.yaml  qdrant.yaml  runtime-contract.yaml  vllm-steward.yaml
k8s/grafana/: 10_serviceaccount.yml  20_config.yml  30_deploy.yml  40_service.yml  50_dashboards_cm.yml
k8s/vector/: agent.yaml  pvc.yaml
sql/: 010_telemetry_schema.sql  schema.sql
