[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-router"
version = "0.1.0"
description = "Memory Router: The Read-Only Data Plane"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  { name = "HomeL(ab) Dev", email = "opensource@homel.dev" }
]

dependencies = [
  "fastapi>=0.110",
  "fastmcp>=3.0.0rc1",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "qdrant-client>=1.7.3",
  "python-multipart>=0.0.9",
  "tiktoken>=0.6.0",
  "numpy>=2.4.2",
  "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.8",
]

# --- CRITICAL FOR SRC LAYOUT ---
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# --- ENGINEERING STANDARDS ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Error, Pyflakes, Isort

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true # Essential for libs like psycopg/qdrant without stubs

